--- a/project/index.html
+++ b/project/index.html
@@ -5,18 +5,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="./img/apple-icon-76x76.png">
   <title> Lose It! - Weight Loss That Fits</title>
-  <link rel="stylesheet" href="../css/index.css">
+  <link rel="stylesheet" href="./css/index.css">
   <script src="https://kit.fontawesome.com/82c1872f04.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
   <div class="container">
     <div class="top">
       <div id="top">Lose it! is hiring! click here to see our open positions</div>
       <div id="logo_login">
-        <img src="../img/CUT_THE_FAT-removebg-preview.png" alt="Logo img">
-        <button><a href="login.html">Login</a></button>
+        <img src="./img/CUT_THE_FAT-removebg-preview.png" alt="Logo img">
+        <div>
+          <button><a href="login.html">User Login</a></button>
+          <button id="admin"><a href="adminlogin.html">Admin login</a></button>
+        </div>
       </div>
       <div class="middle">
         <img src="https://assets.loseit.com/website/home/Screenshot_LogScreenFixed.png" alt="">
@@ -27,7 +30,7 @@
           <div>
             <div>
               <i class="fa-brands fa-apple"></i>
-              <i class="fa-solid fa-star"></i>
+              signupArr     <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -35,7 +38,7 @@
 
             </div>
             <div>
-              <i class="fa-brands fa-android"></i>
+              <i class=" f fa-brands fa-android"></i>
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -214,7 +217,7 @@
     </div>
     <div class="footer">
       <div>
-        <img src="../img/CUT_THE_FAT-removebg-preview.png" alt="">
+        <img src="./img/CUT_THE_FAT-removebg-preview.png" alt="">
         <table>
           <tbody>
             <tr>
@@ -255,9 +258,9 @@
         </div>
       </div>
     </div>
-    <!-- <div class="man"> -->
-    <img class="man" src="https://cdn.userway.org/widgetapp/images/body_wh.svg" alt="logo">
-    <!-- </div> -->
+    <div class="man">
+      <img src="https://cdn.userway.org/widgetapp/images/body_wh.svg" alt="logo">
+    </div>
     </div>
     </div>
 </body>
