--- a/project/login.html
+++ b/project/login.html
@@ -15,10 +15,10 @@
       <img src="./img/CUT_THE_FAT-removebg-preview.png" alt="">
       <form>
         <label for="email">Email Address</label>
-        <input type="text">
+        <input type="text" id="email">
 
         <label for="password">Password</label>
-        <input id="password" type="password">
+        <input id="pass" type="password">
 
         <input type="submit" value="Log In">
         <div class="bottom">
@@ -42,3 +42,4 @@
 </body>
 
 </html>
+<script src="./js/login.js"></script>
