--- a/project/signup.html
+++ b/project/signup.html
@@ -33,9 +33,19 @@
         </div>
       </div>
       <form>
-        <h2>Have you counted calories before?</h2>
-        <button id="yes"><a href="yes.html">Yes</a></button>
-        <button id="no"><a href="no.html">No</a></button>
+        <form>
+          <h2>Create an account to save your plan</h2>
+          <input type="text" placeholder="Frist Name" id="name">
+          <input type="email" placeholder="Email" id="email">
+          <input type="password" placeholder="Password" id="pass">
+          <input type="password" placeholder=" Confirm Password" id="cpass">
+          <input type="number" placeholder="Enter weight in kg" id="cweight">
+          <input type="number" placeholder="Enter weight in kg" id="gweight">
+          <input type="text" placeholder="Enter height" id="height">
+          <input type="date" placeholder="Enter Birth date" id="bday">
+          <input type="text" placeholder='Gender' id="gender">
+          <input type="submit" value="Get Started" id="con1">
+        </form>
       </form>
     </div>
     <div class="footer">
@@ -54,3 +64,4 @@
 </body>
 
 </html>
+<script src="./js/signup.js"></script>
