--- a/project/index.html
+++ b/project/index.html
@@ -30,7 +30,7 @@
           <div>
             <div>
               <i class="fa-brands fa-apple"></i>
-              signupArr     <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
