--- a/project/index.html
+++ b/project/index.html
@@ -211,8 +211,8 @@
     <div class="get_started">
       <h2> Get Started on Mobile</h2>
       <div>
-        <img src="../img/app.PNG" alt="app">
-        <img src="../img/play.PNG" alt="play">
+        <img src="./img/app.PNG" alt="app">
+        <img src="./img/play.PNG" alt="play">
       </div>
     </div>
     <div class="footer">
@@ -266,4 +266,4 @@
 </body>
 
 </html>
-<script src="../js/index.js"></script>
+<script src="./js/index.js"></script>
