--- a/project/loss.html
+++ b/project/loss.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Cut The Fat! Lose</title>
   <link rel="stylesheet" href="./css/loss.css">
   <script src="https://kit.fontawesome.com/82c1872f04.js" crossorigin="anonymous"></script>
 </head>
